Insignificant Refactor